Fix the footer spacing
The line of text wasn't vertically centered.

--- a/index.css
+++ b/index.css
@@ -20,6 +20,10 @@ h3, p {
     margin-top: 1em;
 }
 
+footer p {
+    margin-top: 0;
+}
+
 .markdown-body a {
     color: #0366d6;
 }
